# haskell-hdbc-tool.201303

./: haskell-hdbc-genschema.cabal
debian/: changelog  control  rules  watch
src/Database/HDBC/: Join.hs  Persistable.hs  Record.hs  RecordJoin.hs  TH.hs  Tuple.hs
src/Language/SQL/: SqlWord.hs
