
name:                HDBC-genschema
version:             0.1.0.0
synopsis:            Tools to generate DB schema for HDBC
description:         This package contains template haskell functions to generate codes
                     correspond to DB table definitions.
homepage:            http://twitter.com/khibino
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.2

library
  exposed-modules:     Language.SQL.SqlWord
                       Database.HDBC.Persistable
                       Database.HDBC.RecordJoin
                       Database.HDBC.TH
  -- other-modules:       
  build-depends:         base <5
                       , template-haskell
                       , convertible
                       , HDBC
  hs-source-dirs:      src
